feat: documenting professional module
